--- a/gazbank/sys.config
+++ b/gazbank/sys.config
@@ -10,6 +10,10 @@
         {origin,<<"*">>},
         {pickler,n2o_secret},
         {event,pickle}]},
+        {protocols,[n2o_nitro]},
+        {filter,{n2o_proto,push}
+        }]}
+
  {kvs, [{dba,kvs_mnesia},
         {dba_st,kvs_stream},
         {schema, [kvs, kvs_stream ]} ]}
